# sarima_exercise

./: README.md  index.html  index.qmd  lab1-sarima.ipynb  main.py  pyproject.toml  template-exercicio-sarima.html  template-exercicio-sarima.qmd  template-exercicio-sarima.quarto_ipynb_2  template-exercicio-sarima.quarto_ipynb_3
