[project]
name = "sarima-exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyyaml>=6.0.3",
    "statsforecast>=2.0.3",
    "statsmodels>=0.14.6",
]
